--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,300&family=Work+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;1,300&family=Work+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap&family=Inconsolata:wght@400;500;700;800&display=swap"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
-<body class="mdc-typography mat-typography">
+<body class="mdc-typography">
   <app-root></app-root>
 </body>
 
